fixed invalid bower wildcard

--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,7 @@
   "license": "Apache-2.0",
   "ignore": [
     "**/*",
-    "!client",
+    "!client/*",
     "node_modules",
     "bower_components",
     "test",
