--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Roland Singer <roland.singer@desertbit.com>",
-  "license": "Apache-2.0"
+  "license": "GPL3"
 }
