Closes #14 Update license to dual MIT and GPL3

--- a/client/package.json
+++ b/client/package.json
@@ -15,5 +15,5 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Roland Singer <roland.singer@desertbit.com>",
-  "license": "GPL3"
+  "license": "(MIT OR GPL3)"
 }
