Closes #14 Update license to MIT

--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,7 @@
   "keywords": [
     "[\"socket\"]"
   ],
-  "license": "GPL3",
+  "license": "MIT",
   "ignore": [
     "**/*",
     "!client/*",
